Add project link to the index

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Archit's React Projects</title>
-    <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -17,28 +16,17 @@
       <div class="projects-container">
         <div class="project-card">
           <h2>Tic Tac Toe</h2>
-          <a
-            href="https://architadh.netlify.app/tic-tac-toe-react"
-            target="_blank"
+          <a href="https://archit-tictactoe.netlify.app/" target="_blank"
             >Open App</a
           >
         </div>
 
         <div class="project-card">
-          <h2>Flappy Bird Clone</h2>
-          <a href="https://architadh.netlify.app/flappy-bird" target="_blank"
-            >Open App</a
+          <h2>Next Challenge</h2>
+          <a href="" style="pointer-events: none; color: #888" target="_blank"
+            >Coming Soon</a
           >
         </div>
-
-        <div class="project-card">
-          <h2>Maze Game</h2>
-          <a href="https://architadh.netlify.app/maze-game" target="_blank"
-            >Open App</a
-          >
-        </div>
-
-        <!-- Add more project cards as needed -->
       </div>
     </main>
 
